--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,6 @@ body {
   
   h1 {
     margin-bottom: 20px;
-    font-size: 36px;
     font-size: 36px; /* Ukuran font */
     font-weight: bold; /* Ketebalan font */
     letter-spacing: 2px; /* Jarak antar huruf */
@@ -230,3 +229,57 @@ body {
     transition: background-color 0.2s ease;
   }
   
+  @media (max-width: 768px) {
+    #background-video {
+      left: 57%;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      margin-top: 20px;
+      font-size: 18px; /* Ukuran font */
+      font-weight: bold; /* Ketebalan font */
+      letter-spacing: 2px; /* Jarak antar huruf */
+      color: #fff;
+    }
+
+    .character-display img {
+      width: 700px; /* Sesuaikan lebar gambar karakter utama agar sesuai dengan layar */
+      height: auto; /* Pertahankan rasio aspek gambar */
+      top: 20px;
+      left: -490px; /* Atur posisi gambar karakter utama ke tengah */
+      transform: none; /* Hapus transformasi */
+    }
+  
+    .character-icons {
+      display: flex;
+      flex-wrap: nowrap;
+      bottom: 70px; /* Sesuaikan jarak dari bawah */
+      left: 51%; /* Tempatkan di tengah secara horizontal */
+      transform: translateX(-50%); /* Tempatkan di tengah secara horizontal */
+      max-height: 20%; /* Sesuaikan tinggi maksimal ikon */
+      max-width: 70%; /* Sesuaikan lebar maksimal ikon */
+    }
+  
+    .character-icons img {
+      width: 60px; /* Sesuaikan ukuran ikon */
+      height: 60px;
+    }
+  
+    #music-controls {
+      position: absolute;
+      bottom: 10px; /* Sesuaikan jarak dari bawah */
+      left:auto;
+      width: calc(100% - 60px); /* Lebar kontrol musik agar sesuai dengan layar */
+      justify-content: space-between; /* Tempatkan kontrol musik di ujung kiri dan kanan */
+    }
+  
+    #play-pause-btn {
+      width: 24px; /* Sesuaikan ukuran tombol */
+      height: 24px;
+    }
+  
+    #progress-bar {
+      width: 100px; /* Sesuaikan panjang bar kemajuan */
+    }
+  }
