--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden; /* Menghindari scrollbar */
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Anton', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-image: url('images/BG.jpg'); /* Gambar background */
     background-size: cover; /* Memastikan gambar memenuhi layar */
     background-position: center; /* Memusatkan gambar */
@@ -105,8 +105,8 @@
     color: #fff;
     text-align: center;
     position: absolute;
-    top: 437px; /* Menyesuaikan jarak di atas ikon */
-    left: -247px;
+    top: 425px; /* Menyesuaikan jarak di atas ikon */
+    left: -230px;
     transform: translateX(-50%);
     transition: transform 0.5s;
   }
@@ -250,13 +250,14 @@
     bottom: 20px;
     right: 20px;
     z-index: 10;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: #fd4556; /* Warna background merah */
     color: #fffbf5; /* Warna tulisan putih */
     border: none;
-    border-radius: 5px;
+    border-radius: 7px;
     padding: 10px 20px;
-    font-size: 16px;
+    font-family: 'New Amsterdam', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 20px;
+    letter-spacing: 2px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -265,13 +266,13 @@
 
   .play-icon-container {
     background-color: #fffbf5; /* Latar belakang putih untuk ikon */
-    border-radius: 50%; /* Membuat bentuk bulat */
+    border-radius: 30%; /* Membuat bentuk bulat */
     display: flex;
     justify-content: center;
     align-items: center;
     width: 24px;
     height: 24px;
-    margin-left: 8px; /* Jarak antara teks dan ikon play */
+    margin-left: 15px; /* Jarak antara teks dan ikon play */
   }
 
   .play-icon {
@@ -312,7 +313,7 @@
   
     #character-name {
       top: 437px; /* Menyesuaikan jarak di atas ikon */
-      left: -130px;
+      left: -123px;
     }
 
     .character-icons {
